--- a/index.html
+++ b/index.html
@@ -19,7 +19,259 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+
+    <!-- NAVBAR SECTION -->
+
+    <div class="container">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+            <img class="img-thumbnail" src="images/logo.png" alt="">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#shoes">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Backpack">Backpack</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#subscribe">Subscribe</a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+
+
+    <!-- CAROUSEL -->
+    <div class="container">
+        <div id="carouselExampleControls" class="carousel slide orange-bg my-5" data-ride="carousel">
+            <div class="carousel-inner">
+
+
+                <div class="carousel-item active">
+                    <div class="row align-items-center">
+                        <div class="col-md-7  ">
+                            <div class="container col-10">
+                                <h1>LED Tv</h1>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio corporis voluptas
+                                    laudantium aliquid perspiciatis tempore distinctio nisi in inventore unde.</p>
+                                <h1 class="price">$1200</h1>
+                                <button class="btn btn-danger">BUY NOW</button>
+                            </div>
+
+
+                        </div>
+                        <div class="col-md-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100 " alt="Responsive image">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="carousel-item ">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                            <div class="container col-10">
+                                <h1>HEADPHONE</h1>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio corporis voluptas
+                                    laudantium aliquid perspiciatis tempore distinctio nisi in inventore unde.</p>
+                                <h1 class="price">$300</h1>
+                                <button class="btn btn-danger">BUY NOW</button>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100 " alt="Responsive image">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="carousel-item ">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
+                            <div class="container col-10">
+                                <h1>Y-BOX TO WASTE TIME</h1>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio corporis voluptas
+                                    laudantium aliquid perspiciatis tempore distinctio nisi in inventore unde.</p>
+                                <h1 class="price">$600</h1>
+                                <button class="btn btn-danger">BUY NOW</button>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100 " alt="Responsive image">
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div class="container text-light categories  mb-5">
+
+        <div class="row ">
+            <div class="col-md-4">
+                <div class="d-flex justify-content-around align-items-center  cat1 py-1">
+
+                    <h1>Watch</h1>
+                    <img class="" src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-around align-items-center cat2 py-1">
+
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+                </div>
+
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-around align-items-center  cat3 py-1">
+
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Shoes section -->
+
+    <div class="container" id="shoes">
+        <h3 class="section-title">Shoes</h3>
+
+
+        <div class="card-deck mt-2 mb-5 ">
+            <div class="card">
+                <img class="card-img-top" src="images/shoes/shoe-1.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Supply 350</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quibusdam
+                        corrupti nam fugit autem ratione nesciunt aliquam fuga dignissimos ullam.</p>
+                    <h5>$120</h5>
+                    <a href="#" class="btn btn-danger">BUY NOW</a>
+
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/shoes/shoe-2.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Nike 320</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum atque
+                        dignissimos quod ut quia dolore quis at, ad sunt.</p>
+                    <h5>$320</h5>
+                    <a href="#" class="btn btn-danger">BUY NOW</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/shoes/shoe-3.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Red Max</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam at possimus
+                        nulla porro repellendus consectetur quaerat deserunt accusamus, provident quidem.</p>
+                    <h5>$350</h5>
+                    <a href="#" class="btn btn-danger">BUY NOW</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- backPack section -->
+
+    <div class="container mb-5" id="Backpack">
+        <h3 class="section-title">Backpack</h3>
+
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/bags/bag-1.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Red Backpack</h5>
+                    <h5>$125</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-danger">BUY NOW</a>
+
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/bags/bag-2.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Blue Backpack</h5>
+                    <h5>$320</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-danger">BUY NOW</a>
+
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/bags/bag-3.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Blackpack </h5>
+                    <h5>$169</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn btn-danger">BUY NOW</a>
+
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+
+    <!-- Bottom Section -->
+
+    <div id="subscribe" class=" orange-bg container mb-5 d-flex justify-content-center align-items-center  ">
+
+        <div>
+            <h3 class="section-title">
+                LET'S STAY IN TOUCH </h3>
+            <h6>Get updates on sales specials and more</h6>
+            <input class="form-control" type="email" placeholder="Enter Your Email">
+
+
+            <a href="#" class="btn btn-danger mt-1">Submit</a>
+        </div>
+    </div>
+    <!-- Footer section -->
+    <footer>
+        <h6>©2020 Panda commerce. All rights reserved. Sofia Bulgaria</h6>
+    </footer>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
